# quill

./: .gitignore  CHANGELOG.md  Cargo.toml  Notes.md  README.md  cliff.toml  release.toml
crates/bevy_mod_stylebuilder/: Cargo.toml  README.md
crates/bevy_mod_stylebuilder/src/: atlas_loader.rs  builder.rs  builder_background.rs  builder_border_color.rs  builder_border_radius.rs  builder_font.rs  builder_layout.rs  builder_outline.rs  builder_pointer_events.rs  builder_texture_atlas.rs  builder_visibility.rs  builder_z_index.rs  lib.rs  text_styles.rs
crates/bevy_quill_core/: Cargo.toml  README.md
crates/bevy_quill_core/src/: callback.rs  cond.rs  cx.rs  dynamic.rs  effects.rs  element.rs  for.rs  for_each.rs  for_index.rs  insert.rs  lcs.rs  lib.rs  mutable.rs  portal.rs  style.rs  switch.rs  text_view.rs  tracking_scope.rs  view.rs  view_child.rs  view_template.rs
crates/bevy_quill_obsidian/: Cargo.toml  README.md
crates/bevy_quill_obsidian/assets/textures/: button.atlas.grid.ron
crates/bevy_quill_obsidian/src/: cursor.rs  floating.rs  focus.rs  lib.rs  rounded_corners.rs  scrolling.rs  size.rs  typography.rs
crates/bevy_quill_obsidian/src/assets/shaders/: gradient_rect.wgsl  rounded_rect.wgsl  slider_rect.wgsl
crates/bevy_quill_obsidian/src/controls/: button.rs  checkbox.rs  color_edit.rs  dialog.rs  disabled.rs  disclosure_toggle.rs  flex.rs  gradient_slider.rs  icon.rs  icon_button.rs  listview.rs  menu.rs  mod.rs  scrollview.rs  slider.rs  spacer.rs  spinbox.rs  splitter.rs  swatch.rs  swatch_grid.rs  tool_palette.rs
crates/bevy_quill_obsidian/src/hooks/: bistable_transition.rs  element_rect.rs  is_focus.rs  is_hover.rs  mod.rs
crates/bevy_quill_obsidian/src/materials/: gradient_rect.rs  slider_rect.rs  swatch_rect.rs
crates/bevy_quill_obsidian_graph/: Cargo.toml  README.md
crates/bevy_quill_obsidian_graph/src/: edge_display.rs  edge_display_ls.rs  events.rs  graph.rs  graph_display.rs  lib.rs  node.rs  node_display.rs  node_graph.rs  relative_pos.rs  terminal_display.rs
crates/bevy_quill_obsidian_graph/src/assets/: draw_path.wgsl
crates/bevy_quill_obsidian_graph/src/materials/: dot_grid.rs  draw_path.rs  line_material.rs  mod.rs
crates/bevy_quill_obsidian_inspect/: Cargo.toml  README.md
crates/bevy_quill_obsidian_inspect/src/: default_factory.rs  inspectable.rs  inspector.rs  inspector_factory.rs  lib.rs
crates/bevy_quill_obsidian_inspect/src/inspectors/: bool.rs  color.rs  enum.rs  f32.rs  fallback.rs  list.rs  struct.rs  tuple_struct.rs  vec3.rs
crates/bevy_quill_obsidian_inspect/src/templates/: color_edit.rs  field_label.rs  field_readonly_value.rs  inspector_panel.rs  mod.rs
crates/bevy_quill_overlays/: Cargo.toml
crates/bevy_quill_overlays/src/: lib.rs  lines_builder.rs  mesh_builder.rs  overlay.rs  overlay.wgsl  overlay_material.rs  shape_builder.rs
crates/bevy_vortex/: Cargo.toml
crates/bevy_vortex/src/: add_node.rs  catalog.rs  graph.rs  graph_view.rs  main.rs  operator.rs  pipeline.rs  placeholder_shader.wgsl  preview.rs  propedit.rs
crates/bevy_vortex/src/commands/: add_connection.rs  delete_selected.rs  mark_modified.rs  mod.rs
crates/bevy_vortex/src/ops/: bricks.rs  color.rs  geometry.rs  grayscale.rs  mix.rs  mod.rs  noise.rs  output.rs  simplex_noise.rs
crates/bevy_vortex/src/ops/wgsl/: bricks.wgsl  mod.rs  noised.wgsl  smootherstep.wgsl
crates/obsidian_ui_quill/: Cargo.toml
crates/obsidian_ui_quill/assets/shaders/: dot_grid.wgsl  draw_path.wgsl  rounded_box.wgsl  swatch_rect.wgsl
crates/obsidian_ui_quill/src/: colors.rs  cursor.rs  lib.rs  rounded_corners.rs  size.rs
crates/obsidian_ui_quill/src/controls/: button.rs  mod.rs  spacer.rs
crates/obsidian_ui_quill/src/hooks/: is_focus.rs  is_hover.rs
crates/quill_obsidian/: Cargo.toml
crates/quill_obsidian/assets/shaders/: rounded_rect.wgsl
crates/quill_obsidian/src/: focus.rs  lib.rs  scrolling.rs  typography.rs  viewport.rs
crates/quill_obsidian/src/animation/: mod.rs
crates/quill_obsidian/src/assets/shaders/: rounded_rect.wgsl
crates/quill_obsidian/src/controls/: button.rs  checkbox.rs  dialog.rs  disabled.rs  disclosure_toggle.rs  gradient_slider.rs  icon.rs  icon_button.rs  listview.rs  menu.rs  mod.rs  scrollview.rs  slider.rs  spacer.rs  spinbox.rs  splitter.rs  swatch.rs  swatch_grid.rs  tool_palette.rs
crates/quill_obsidian/src/hooks/: bistable_transition.rs  is_focus.rs  is_hover.rs  mod.rs
crates/quill_obsidian/src/materials/: gradient_rect.rs  mod.rs  slider_rect.rs  swatch_rect.rs
crates/quill_obsidian_graph/: Cargo.toml
crates/quill_obsidian_inspect/: Cargo.toml
crates/quill_obsidian_inspect/src/: attributes.rs  inspectable.rs  inspector.rs  inspector_factory.rs
crates/quill_obsidian_inspect/src/inspectors/: bool.rs  color.rs  enum.rs  f32.rs  fallback.rs  list.rs  mod.rs  struct.rs  tuple_struct.rs  vec3.rs
crates/quill_obsidian_inspect/src/templates/: color_edit.rs  field_label.rs  field_readonly_value.rs  inspector_panel.rs  mod.rs
examples/: buttons.rs  colors.rs  complex1.rs  controls.rs  dynamic.rs  hover.rs  iter.rs  overlay.rs  pause.rs  scene.rs  simple.rs
examples/common/: lib.rs
examples/complex/: main.rs  reflect_demo.rs
src/: callback.rs  cond.rs  cx.rs  dynamic.rs  effects.rs  element.rs  for.rs  for_each.rs  fragment.rs  insert.rs  lib.rs  memoize.rs  mutable.rs  node_span.rs  portal.rs  style.rs  text_view.rs  tracking_scope.rs  view.rs  view_child.rs  view_template.rs  view_tuple.rs
