[package]
name = "bevy_quill"
version = "0.1.3"
edition = "2021"
description = "A reactive UI framework for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive"]

# homepage
# readme

[workspace]
members = ["crates/*"]

[features]
# default = ["verbose"]
verbose = [] # Enable verbose logging

[workspace.dependencies]
bevy = "0.14.0"
bevy_mod_stylebuilder = { path = "crates/bevy_mod_stylebuilder", version = "0.1.1" }
bevy_mod_picking = { version = "0.20.1", default-features = false }
bevy_quill_core = { path = "crates/bevy_quill_core", version = "0.1.1" }
bevy_quill_obsidian = { path = "crates/bevy_quill_obsidian", version = "0.1.1" }
bevy_quill_obsidian_inspect = { path = "crates/bevy_quill_obsidian_inspect", version = "0.1.0" }
bevy_quill_obsidian_graph = { path = "crates/bevy_quill_obsidian_graph", version = "0.1.0" }
bevy_quill_overlays = { path = "crates/bevy_quill_overlays", version = "0.1.0" }

[dependencies]
bevy = { workspace = true }
bevy_quill_core = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
impl-trait-for-tuples = "0.2.2"
smallvec = "1.13.2"

[dev-dependencies]
bevy_quill_obsidian = { path = "crates/bevy_quill_obsidian" }
bevy_mod_picking = { workspace = true, features = [
  "debug",
  "backend_raycast",
  "backend_bevy_ui",
] }
bevy_quill_obsidian_inspect = { workspace = true }
bevy_quill_overlays = { workspace = true }
# bevy_picking_backdrop = { path = "crates/bevy_picking_backdrop" }

[lints.clippy]
type_complexity = "allow"
