[package]
name = "bevy_mod_stylebuilder"
version = "0.1.2"
edition = "2021"
description = "A set of fluent builder utilities for Bevy UI styles."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive"]

[features]
default = ["mod_picking"]
mod_picking = []          # Enable support for bevy_mod_picking

[dependencies]
bevy = { workspace = true }
bevy_mod_picking = { workspace = true }
impl-trait-for-tuples = "0.2.2"
