[package]
name = "bevy_quill_core"
version = "0.1.0"
edition = "2021"

[features]
# default = ["verbose"]
verbose = [] # Enable verbose logging

[dependencies]
bevy = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
impl-trait-for-tuples = "0.2.2"
smallvec = "1.13.2"

[lints.clippy]
type_complexity = "allow"
