[package]
name = "bevy_quill_core"
version = "0.1.3"
edition = "2021"
description = "A reactive UI framework for Bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive"]

[features]
# default = ["verbose"]
verbose = [] # Enable verbose logging

[dependencies]
bevy = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
impl-trait-for-tuples = "0.2.2"
smallvec = "1.13.2"

[lints.clippy]
type_complexity = "allow"
