[package]
name = "bevy_quill_obsidian_graph"
version = "0.1.1"
edition = "2021"
description = "A collection of widgets for implementing node-graph editors."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive"]

[features]
# default = ["verbose"]
verbose = [] # Enable verbose logging

[dependencies]
bevy = { workspace = true }
bevy_mod_picking = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
bevy_quill_core = { workspace = true }
bevy_quill_obsidian = { workspace = true }
