[package]
name = "bevy_quill_overlays"
description = "Reactive, translucent overlays."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive", "gizmos", "overlays"]

[dependencies]
bevy = { workspace = true }
bevy_mod_picking = { workspace = true }
# bevy_mod_stylebuilder = { workspace = true }
bevy_quill_core = { workspace = true }
