[package]
name = "bevy_quill_overlays"
description = "Reactive, translucent overlays."
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive", "gizmos", "overlays"]

[dependencies]
bevy_mod_picking = { workspace = true, features = [
  "debug",
  "backend_raycast",
  "backend_bevy_ui",
] }
bevy = { workspace = true, features = ["bevy_pbr"] }
# bevy_mod_stylebuilder = { workspace = true }
bevy_quill_core = { workspace = true }
