[package]
name = "bevy_vortex"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_mod_picking = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
bevy_quill = { path = "../.." }
bevy_quill_obsidian = { workspace = true }
bevy_quill_obsidian_graph = { workspace = true }
smallvec = "1.13.2"

[lints.clippy]
type_complexity = "allow"
