[package]
name = "bevy_vortex"
version = "0.1.0"
edition = "2021"
description = "A Bevy-based application for building procedural WGSL shaders."
license = "MIT OR Apache-2.0"
repository = "https://github.com/viridia/quill"
keywords = ["bevy", "ui", "reactive"]

[dependencies]
bevy = { workspace = true }
bevy_mod_picking = { workspace = true }
bevy_mod_stylebuilder = { workspace = true }
bevy_quill = { path = "../.." }
bevy_quill_obsidian = { workspace = true }
bevy_quill_obsidian_graph = { workspace = true }
smallvec = "1.13.2"

[lints.clippy]
type_complexity = "allow"
